[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "data-clean-env"
version = "0.1.0"
description = "OpenEnv-compliant data cleaning environment for LLM agent training"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn==0.30.6",
    "pydantic==2.9.0",
    "pandas==2.2.0",
    "numpy==1.26.4",
    "openai>=1.51.0",
    "requests==2.32.3",
    "python-multipart==0.0.9",
    "python-dotenv>=1.0.0",
    "openenv-core>=0.2.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["tasks*", "server*"]

[project.scripts]
server = "server.app:main"